<resources>
    <string name="app_name">Passport Reader</string>
    <string name="title_activity_emrtdapplication">Passport Reader</string>
    <string name="title_activity_check_nfc">CheckNFC</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="passportNumber">Enter your passport number</string>
    <string name="PPN">AP1126922</string>
    <string name="birthday">Enter your birthday (YYMMDD)</string>
    <string name="bday">000707</string>
    <string name="expirationDate">Enter the expiration date (YYMMDD)</string>
    <string name="eDate">350330</string>
    <string name="or">OR</string>
    <string name="can">Enter the CAN number</string>
    <string name="next">Next</string>
    <string name="readEMRTD">Hold your passport to the back of your phone. It should automatically recognize and start reading the passport.</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="enableNFC">Enable NFC to read\nfrom your passport</string>
    <string name="canNumber">208472</string>
    <string name="help">Help for filling out the manual input</string>
    <string name="oldppn">U1194584</string>
    <string name="oldeDate">260801</string>
    <string name="progress">Reading passport …</string>
    <string name="dg1">Data Group 1</string>
    <string name="name">Name:</string>
    <string name="bd">Birthday</string>
    <string name="sex">Sex</string>
    <string name="additional_biometrics">Additional Biometrics</string>
    <string name="visa_records">Visa Records</string>
    <string name="travel_records">Travel Records</string>
    <string name="main">Main</string>
    <string name="dg11">Data Group 11</string>
    <string name="dg12">Data Group 12</string>
    <string name="reading_common_files">Reading common files…</string>
    <string name="initialize_secure_messaging">Initialize secure messaging…</string>
    <string name="passport_verified">Passport verified</string>
    <string name="reading_cscas">Reading CSCAs…</string>
    <string name="perform_passive_authentication">Perform passive authentication…</string>
    <string name="authenticate_chip">Authenticate chip…</string>
    <string name="reading_ef_com_file">Reading EF.COM file…</string>
    <string name="reading_ef_sod_file">Reading EF.SOD file…</string>
    <string name="unable_to_read_file_from_passport">Unable to read file from passport</string>
    <string name="reading_dg">Reading DG</string>
    <string name="file"> file…</string>
    <string name="scan_passport">Scan Passport</string>
    <string name="exit">Exit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lds1">LDS1</string>
    <string name="entry_records">Entry Records</string>
    <string name="exit_records">Exit Records</string>
    <string name="certificates">Certificates</string>
    <string name="application_is_not_implemented_on_the_emrtd">Application is not implemented on the eMRTD</string>
    <string name="public_key">Public key:</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="address">Address:</string>
    <string name="telephone">Telephone:</string>
    <string name="date_of_recording">Date of Recording:</string>
    <string name="verification_status">Verification Status</string>
    <string name="data_group_2">Data Group 2</string>
    <string name="data_group_3">Data Group 3</string>
    <string name="data_group_4">Data Group 4</string>
    <string name="data_group_5">Data Group 5</string>
    <string name="data_group_6">Data Group 6</string>
    <string name="data_group_7">Data Group 7</string>
    <string name="data_group_8">Data Group 8</string>
    <string name="data_group_9">Data Group 9</string>
    <string name="data_group_10">Data Group 10</string>
    <string name="data_group_13">Data Group 13</string>
    <string name="data_group_14">Data Group 14</string>
    <string name="data_group_15">Data Group 15</string>
    <string name="data_group_16">Data Group 16</string>
    <string name="settings">Settings</string>
    <string name="show_details">Show details</string>
    <string name="dg6_file_content">DG6 File content</string>
    <string name="dg8_file_content">DG8 File content</string>
    <string name="dg9_file_content">DG9 File content</string>
    <string name="dg10_file_content">DG10 File content</string>
    <string name="dg13_file_content">DG13 File content</string>
    <string name="show_unparsed_file_s">Show unparsed file(s)</string>
    <string name="pace_protocol_information">PACE protocol information</string>
    <string name="signature">Signature</string>
    <string name="biometric_content">Biometric Content</string>
    <string name="lost_comm">Lost communication with the passport.\nTry again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="public_key_information">Public Key Information</string>
    <string name="algorithm_identifier">Algorithm identifier:</string>
    <string name="public_key_column">Public Key:</string>

</resources>