<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    style="@style/Theme.EMRTDApplication">

    <LinearLayout
        android:id="@+id/Reading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overlay"
        android:gravity="center"
        android:minHeight="64dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/progressBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/progress"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:maxWidth="256dp"
            android:maxHeight="48dp"
            android:minWidth="256dp"
            android:minHeight="48dp"
            android:progress="50"
            android:scrollbarSize="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/beforeRead"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overlay"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/readEMRTD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/readEMRTD"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/overlayNFCEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/emrtd_view_shape"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/enableNFCText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/enableNFC"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nfcCancel"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/enableNFC"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/enable"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

   <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
       android:visibility="visible">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <com.google.android.material.appbar.AppBarLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <androidx.appcompat.widget.Toolbar
                   android:id="@+id/toolbar"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
               </androidx.appcompat.widget.Toolbar>

           </com.google.android.material.appbar.AppBarLayout>


           <FrameLayout
               android:id="@+id/flContent"
               app:layout_behavior="@string/appbar_scrolling_view_behavior"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />

       </LinearLayout>

       <com.google.android.material.navigation.NavigationView
       android:id="@+id/nvView"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:background="@android:color/holo_blue_light"
       app:menu="@menu/application_menu"/>

    </androidx.drawerlayout.widget.DrawerLayout>
</FrameLayout>