<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="dg1"
            type="com.example.emrtdapplication.lds1.DG1" />
        <variable
            name="dg2"
            type="com.example.emrtdapplication.lds1.DG2" />
        <variable
            name="dg3"
            type="com.example.emrtdapplication.lds1.DG3" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TableLayout
            android:id="@+id/dg1layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="visible">

            <TableRow
                android:gravity="center">
                <TextView
                    android:text="@string/dg1"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:id="@+id/name"
                android:gravity="center">
                <TextView
                    android:text="@string/name"
                    android:gravity="center"/>
                <TextView
                    android:text="@{dg1.holderName}"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:gravity="center">
                <TextView
                    android:text="@string/bd"
                    android:gravity="center"/>
                <TextView
                    android:text="@{dg1.dateOfBirth}"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:gravity="center">
                <TextView
                    android:text="@string/sex"
                    android:gravity="center"/>
                <TextView
                    android:text="@{Character.toString(dg1.sex)}"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:id="@+id/documentCode"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Document Code:"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.documentCode}"/>
            </TableRow>

            <TableRow
                android:id="@+id/issueState"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Issuing State:"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.issuerCode}"/>
            </TableRow>

            <TableRow
                android:id="@+id/docNumber"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Document Number"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.documentNumber}"/>
            </TableRow>

            <TableRow
                android:id="@+id/optionalData"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Optional Data:"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.optionalData}"/>
            </TableRow>

            <TableRow
                android:id="@+id/expiryDate"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Expiration Date:"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.dateOfExpiry}"/>
            </TableRow>

            <TableRow
                android:id="@+id/nationality"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Nationality"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.nationality}"/>
            </TableRow>

            <TableRow
                android:id="@+id/optionaldocumentdatanumber"
                android:gravity="center">
                <TextView
                    android:gravity="center"
                    android:text="Optional Data/Document Number"/>
                <TextView
                    android:gravity="center"
                    android:text="@{dg1.optionalDataDocumentNumber}"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dg2layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Data Group 2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dg3layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Data Group 3"/>

        </LinearLayout>

    </LinearLayout>
</layout>

<!--     <data>
        <import type="com.example.emrtdapplication.lds1.DG1"/>
        <variable name="DG1" type="com.example.emrtdapplication.lds1.DG1" />
        <variable name="defaultName" type="String" android:value="John Doe"/>
        <variable name="sex" type="String" android:value="Unknown"/>
    </data>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Facial Biometric Image">

    </ImageView>
-->